# psce

./: Cargo.toml  README.md  go.mod  go.sum
bench/: Cargo.toml
bench/src/: main.rs  perft.rs  suite.rs
benches/: movegen.rs
board/: Cargo.toml
board/src/: bitboard.rs  castling.rs  color.rs  lib.rs  piece.rs  position.rs
cmd/psce/: main.go
core/: Cargo.toml
core/src/: bitboard.rs  castling.rs  color.rs  lib.rs  moves.rs  piece.rs  position.rs  square.rs  undo.rs
go/: README.md  go.mod
internal/bitboard/: bitboard.go  bitboard_test.go  constants.go
internal/constants/: bitboard.go  castling.go  colors.go  move.go  pieces.go
internal/eval/: eval.go
internal/helpers/: bitboard.go  pieces.go
internal/interactive/: interactive.go
internal/move/: move.go
internal/movegen/: bishop.go  bishop_test.go  king.go  king_test.go  knight.go  knight_test.go  magic.go  move.go  movegen.go  occupancy.go  occupancy_test.go  pawn.go  pawn_test.go  queen.go  rook.go  rook_test.go
internal/perft/: perft.go
internal/position/: position.go
internal/search/: search.go
internal/zobrist/: zobrist.go
movegen/: Cargo.toml
movegen/generator/: Cargo.toml
movegen/src/: bishop.rs  king.rs  knight.rs  lib.rs  magic.rs  pawn.rs  queen.rs  rook.rs
perft/: Cargo.toml
search/: Cargo.toml
src/: attack.rs  bitboard.rs  board.rs  castling.rs  color.rs  engine.rs  enums.rs  game.rs  interactive.rs  lib.rs  main.rs  outcome.rs  perft.rs  piece.rs  ply.rs  position.rs  search.rs  square.rs  uci.rs
tests/: perft.rs
tui/: Cargo.toml
uci/: Cargo.toml
(+81 files in other folders)
