[package]
name = "psce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
fastrand = "2.1.0"
rayon = "1.10.0"
strum = { version = "0.26.2", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "movegen"
harness = false
